fix for alignment of side navigation links in outdoors page

--- a/assets/sass/outdoors/_presentation.scss
+++ b/assets/sass/outdoors/_presentation.scss
@@ -65,7 +65,7 @@ html {
   }
 }
 
-.category-outdoors .subnav-items{
+.category-outdoors .menu-odssubnavigation .subnav-items{
 
 	text-align: center;
 }
